@@ -1,904 +1,840 @@
 package com.backend.comfutura.service.serviceImpl;
-
-import com.backend.comfutura.dto.request.ssomaDTO.*;
+import com.backend.comfutura.dto.request.ssoma.*;
 import com.backend.comfutura.dto.response.ssomaDTO.*;
-import com.backend.comfutura.model.Trabajador;
+import com.backend.comfutura.model.Empresa;
+import com.backend.comfutura.model.MaestroServicio;
 import com.backend.comfutura.model.Ots;
-import com.backend.comfutura.model.ssoma.ats.*;
-import com.backend.comfutura.model.ssoma.capacitacion.*;
-import com.backend.comfutura.model.ssoma.catalogo.*;
-import com.backend.comfutura.model.ssoma.inspeccion.*;
-import com.backend.comfutura.model.ssoma.petar.*;
-import com.backend.comfutura.repository.*;
+import com.backend.comfutura.model.Trabajador;
+import com.backend.comfutura.model.ssoma.*;
+import com.backend.comfutura.repository.EmpresaRepository;
+import com.backend.comfutura.repository.MaestroServicioRepository;
+import com.backend.comfutura.repository.OtsRepository;
+import com.backend.comfutura.repository.TrabajadorRepository;
 import com.backend.comfutura.repository.ssoma.*;
 import com.backend.comfutura.service.SsomaService;
-import jakarta.transaction.Transactional;
+import com.backend.comfutura.service.cloudinary.CloudinaryService;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.multipart.MultipartFile;
 
-import java.time.LocalDate;
-import java.time.LocalTime;
+import java.io.IOException;
+import java.time.LocalDateTime;
 import java.util.*;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class SsomaServiceImpl implements SsomaService {
 
-    // Repositorios principales
-    private final AtsRepository atsRepository;
-    private final CapacitacionRepository capacitacionRepository;
-    private final InspeccionEppRepository inspeccionEppRepository;
-    private final InspeccionHerramientaRepository inspeccionHerramientaRepository;
-    private final PetarRepository petarRepository;
+    private final SsomaFormularioRepository ssomaFormularioRepository;
+    private final SsomaSecuenciaTareaRepository secuenciaTareaRepository;
+    private final SsomaParticipanteRepository participanteRepository;
+    private final SsomaParticipanteFirmaRepository participanteFirmaRepository;
+    private final SsomaParticipanteFotoRepository participanteFotoRepository;
+    private final SsomaChecklistSeguridadRepository checklistSeguridadRepository;
+    private final SsomaChecklistFotoRepository checklistFotoRepository;
+    private final SsomaEppCheckRepository eppCheckRepository;
+    private final SsomaEppFotoRepository eppFotoRepository;
+    private final SsomaTemaCharlaRepository temaCharlaRepository;
+    private final SsomaCharlaRepository charlaRepository;
+    private final SsomaCharlaVideoRepository charlaVideoRepository;
+    private final SsomaInspeccionTrabajadorRepository inspeccionTrabajadorRepository;
+    private final SsomaHerramientaMaestraRepository herramientaMaestraRepository;
+    private final SsomaHerramientaInspeccionRepository herramientaInspeccionRepository;
+    private final SsomaHerramientaFotoRepository herramientaFotoRepository;
+    private final SsomaPetarRepository petarRepository;
+    private final SsomaPetarPreguntaMaestraRepository petarPreguntaMaestraRepository;
+    private final SsomaPetarRespuestaRepository petarRespuestaRepository;
+    private final SsomaEquipoProteccionRepository equipoProteccionRepository;
 
-    // Repositorios para relaciones
-    private final TrabajadorRepository trabajadorRepository;
+    // Repositorios de entidades maestras
     private final OtsRepository otsRepository;
+    private final EmpresaRepository empresaRepository;
+    private final MaestroServicioRepository maestroServicioRepository;
+    private final TrabajadorRepository trabajadorRepository;
 
-    // Repositorios para tablas relacionadas de ATS
-    private final AtsParticipanteRepository atsParticipanteRepository;
-    private final AtsRiesgoRepository atsRiesgoRepository;
-    private final AtsEppRepository atsEppRepository;
-    private final AtsTipoRiesgoRepository atsTipoRiesgoRepository;
-
-    // Repositorios para Capacitación
-    private final CapacitacionAsistenteRepository capacitacionAsistenteRepository;
-
-    // Repositorios para Inspección EPP
-    private final InspeccionEppDetalleRepository inspeccionEppDetalleRepository;
-
-    // Repositorios para Inspección Herramienta
-    private final InspeccionHerramientaDetalleRepository inspeccionHerramientaDetalleRepository;
-
-    // Repositorios para PETAR
-    private final PetarRespuestaRepository petarRespuestaRepository;
-    private final PetarAutorizadoRepository petarAutorizadoRepository;
-// En la sección de repositorios, agrega estos:
-
-    // Repositorios para catálogos
-    private final TrabajoRepository trabajoRepository;
-    private final RolTrabajoRepository rolTrabajoRepository;
-    private final TareaRepository tareaRepository;
-    private final PeligroRepository peligroRepository;
-    private final RiesgoRepository riesgoRepository;
-    private final MedidaControlRepository medidaControlRepository;
-    private final EppRepository eppRepository;
-    private final TipoRiesgoTrabajoRepository tipoRiesgoTrabajoRepository;
-    private final HerramientaRepository herramientaRepository;
+    // Cloudinary Service
+    private final CloudinaryService cloudinaryService;
 
     @Override
     @Transactional
-    public SsomaCompletoResponse crearSsomaCompleto(SsomaCompletoRequest request) {
-        String transaccionId = UUID.randomUUID().toString();
+    public SsomaResponseDTO crearFormularioCompleto(SsomaRequestDTO request) {
+        log.info("Creando formulario SSOMA completo para OT: {}", request.getIdOts());
 
+        // 1. Validar que la OT existe
+        Ots ot = otsRepository.findById(request.getIdOts())
+                .orElseThrow(() -> new RuntimeException("OT no encontrada con ID: " + request.getIdOts()));
+
+        // 2. Crear formulario principal
+        SsomaFormulario formulario = crearFormularioPrincipal(request, ot);
+        SsomaFormulario formularioGuardado = ssomaFormularioRepository.save(formulario);
+
+        // 3. Crear participantes y subir fotos/firmas
+        List<SsomaParticipante> participantes = crearParticipantes(
+                formularioGuardado,
+                request.getParticipantes(),
+                request.getFotosParticipantes()
+        );
+
+        // 4. Crear secuencias de tarea
+        crearSecuenciasTarea(formularioGuardado, request.getSecuenciasTarea());
+
+        // 5. Crear checklist seguridad
+        crearChecklistSeguridad(formularioGuardado, request.getChecklistSeguridad());
+
+        // 6. Crear EPP checks
+        crearEppChecks(formularioGuardado, request.getEppChecks(), request.getFotosEpp());
+
+        // 7. Crear charla y video
+        if (request.getCharla() != null) {
+            crearCharla(formularioGuardado, request.getCharla(), request.getVideoCharla());
+        }
+
+        // 8. Crear inspecciones trabajador
+        crearInspeccionesTrabajador(formularioGuardado, request.getInspeccionesTrabajador());
+
+        // 9. Crear herramientas inspección
+        crearHerramientasInspeccion(formularioGuardado, request.getHerramientasInspeccion(), request.getFotosHerramientas());
+
+        // 10. Crear PETAR
+        if (request.getPetar() != null) {
+            crearPetar(formularioGuardado, request.getPetar());
+        }
+
+        log.info("Formulario SSOMA creado exitosamente con ID: {}", formularioGuardado.getIdSsoma());
+
+        // Retornar respuesta con todos los datos
+        return convertirAResponseDTO(formularioGuardado);
+    }
+
+    private SsomaFormulario crearFormularioPrincipal(SsomaRequestDTO request, Ots ot) {
+        Empresa empresa = null;
+        if (request.getEmpresaId() != null) {
+            empresa = empresaRepository.findById(request.getEmpresaId())
+                    .orElse(null);
+        }
+
+        MaestroServicio trabajo = null;
+        if (request.getTrabajoId() != null) {
+            trabajo = maestroServicioRepository.findById(request.getTrabajoId())
+                    .orElse(null);
+        }
+
+        return SsomaFormulario.builder()
+                .ots(ot)
+                .empresa(empresa)
+                .trabajo(trabajo)
+                .latitud(request.getLatitud())
+                .longitud(request.getLongitud())
+                .fecha(request.getFecha() != null ? request.getFecha() : LocalDateTime.now())
+                .horaInicio(request.getHoraInicio())
+                .horaFin(request.getHoraFin())
+                .horaInicioTrabajo(request.getHoraInicioTrabajo())
+                .horaFinTrabajo(request.getHoraFinTrabajo())
+                .supervisorTrabajo(request.getSupervisorTrabajo())
+                .supervisorSst(request.getSupervisorSst())
+                .responsableArea(request.getResponsableArea())
+                .build();
+    }
+
+    private List<SsomaParticipante> crearParticipantes(
+            SsomaFormulario formulario,
+            List<ParticipanteDTO> participantesDTO,
+            List<SsomaRequestDTO.FotoParticipante> fotosParticipantes) {
+
+        if (participantesDTO == null) return new ArrayList<>();
+
+        AtomicInteger index = new AtomicInteger(0);
+        return participantesDTO.stream().map(dto -> {
+            // Buscar trabajador si se proporciona ID
+            Trabajador trabajador = null;
+            if (dto.getTrabajadorId() != null) {
+                trabajador = trabajadorRepository.findById(dto.getTrabajadorId())
+                        .orElse(null);
+            }
+
+            // Crear participante
+            SsomaParticipante participante = SsomaParticipante.builder()
+                    .ssomaFormulario(formulario)
+                    .trabajador(trabajador)
+                    .nombre(dto.getNombre())
+                    .cargo(dto.getCargo())
+                    .build();
+
+            SsomaParticipante participanteGuardado = participanteRepository.save(participante);
+
+            // Subir firma si existe
+            if (dto.getFirma() != null) {
+                subirFirmaParticipante(participanteGuardado, dto.getFirma());
+            }
+
+            // Subir fotos del participante
+            if (fotosParticipantes != null) {
+                fotosParticipantes.stream()
+                        .filter(foto -> foto.getParticipanteIndex() != null &&
+                                foto.getParticipanteIndex().equals(index.get()))
+                        .forEach(foto -> subirFotoParticipante(participanteGuardado, foto.getFoto(), foto.getTipoFoto()));
+            }
+
+            index.incrementAndGet();
+            return participanteGuardado;
+        }).collect(Collectors.toList());
+    }
+
+    private void subirFirmaParticipante(SsomaParticipante participante, MultipartFile firmaFile) {
         try {
-            // 1. Crear ATS
-            AtsResponse atsResponse = null;
-            if (request.getAts() != null) {
-                atsResponse = crearAts(request.getAts());
-            }
+            Map uploadResult = cloudinaryService.upload(firmaFile, Map.of(
+                    "folder", "ssoma/firmas",
+                    "resource_type", "raw" // Para mantener calidad de firma
+            ));
 
-            // 2. Crear Capacitación
-            CapacitacionResponse capacitacionResponse = null;
-            if (request.getCapacitacion() != null) {
-                capacitacionResponse = crearCapacitacion(request.getCapacitacion());
-            }
+            String firmaUrl = (String) uploadResult.get("secure_url");
 
-            // 3. Crear Inspección EPP
-            InspeccionEppResponse inspeccionEppResponse = null;
-            if (request.getInspeccionEpp() != null) {
-                inspeccionEppResponse = crearInspeccionEpp(request.getInspeccionEpp());
-            }
+            SsomaParticipanteFirma firma = SsomaParticipanteFirma.builder()
+                    .participante(participante)
+                    .firmaUrl(firmaUrl)
+                    .fechaFirma(LocalDateTime.now())
+                    .build();
 
-            // 4. Crear Inspección Herramientas
-            InspeccionHerramientaResponse inspeccionHerramientaResponse = null;
-            if (request.getInspeccionHerramienta() != null) {
-                inspeccionHerramientaResponse = crearInspeccionHerramienta(request.getInspeccionHerramienta());
-            }
+            participanteFirmaRepository.save(firma);
 
-            // 5. Crear PETAR
-            PetarResponse petarResponse = null;
-            if (request.getPetar() != null) {
-                petarResponse = crearPetar(request.getPetar());
-            }
-
-            // Construir respuesta
-            SsomaCompletoResponse response = new SsomaCompletoResponse();
-            response.setMensaje("SSOMA completo creado exitosamente");
-            response.setTransaccionId(transaccionId);
-            response.setAts(atsResponse);
-            response.setCapacitacion(capacitacionResponse);
-            response.setInspeccionEpp(inspeccionEppResponse);
-            response.setInspeccionHerramienta(inspeccionHerramientaResponse);
-            response.setPetar(petarResponse);
-
-            return response;
-
-        } catch (Exception e) {
-            throw new RuntimeException("Error al crear SSOMA completo: " + e.getMessage(), e);
+        } catch (IOException e) {
+            log.error("Error al subir firma del participante: {}", participante.getIdParticipante(), e);
+            throw new RuntimeException("Error al subir firma: " + e.getMessage());
         }
     }
-    @Override
-    public SsomaCompletoResponse obtenerSsomaCompletoPorOts(Integer idOts) {
-        SsomaCompletoResponse response = new SsomaCompletoResponse();
 
-        // Obtener ATS de esta OT
-        List<Ats> atsList = atsRepository.findByOtsIdOts(idOts);
-        if (!atsList.isEmpty()) {
-            response.setAts(construirAtsResponse(atsList.get(0))); // O tomar el más reciente
-        }
-
-        // Obtener Capacitaciones de esta OT
-        List<Capacitacion> capacitaciones = capacitacionRepository.findByOtsIdOts(idOts);
-        if (!capacitaciones.isEmpty()) {
-            response.setCapacitacion(convertirCapacitacionAResponse(capacitaciones.get(0)));
-        }
-
-        // Obtener Inspecciones EPP de esta OT
-        List<InspeccionEpp> inspeccionesEpp = inspeccionEppRepository.findByOtsIdOts(idOts);
-        if (!inspeccionesEpp.isEmpty()) {
-            response.setInspeccionEpp(convertirInspeccionEppAResponse(inspeccionesEpp.get(0)));
-        }
-
-        // Obtener Inspecciones Herramienta de esta OT
-        List<InspeccionHerramienta> inspeccionesHerramienta = inspeccionHerramientaRepository.findByOtsIdOts(idOts);
-        if (!inspeccionesHerramienta.isEmpty()) {
-            response.setInspeccionHerramienta(convertirInspeccionHerramientaAResponse(inspeccionesHerramienta.get(0)));
-        }
-
-        // Obtener PETAR de esta OT
-        List<Petar> petares = petarRepository.findByOtsIdOts(idOts);
-        if (!petares.isEmpty()) {
-            response.setPetar(convertirPetarAResponse(petares.get(0)));
-        }
-
-        response.setMensaje("SSOMA completo obtenido para OT: " + idOts);
-
-        return response;
-    }
-
-
-
-    // =====================================================
-    // 1. CREAR ATS
-    // =====================================================
-
-    @Override
-    @Transactional
-    public AtsResponse crearAts(AtsRequest request) {
+    private void subirFotoParticipante(SsomaParticipante participante, MultipartFile fotoFile, String tipoFoto) {
         try {
-            // Generar número de registro
-            String numeroRegistro = generarNumeroRegistro("ATS");
+            Map uploadResult = cloudinaryService.upload(fotoFile, Map.of(
+                    "folder", "ssoma/fotos_participantes",
+                    "transformation", new com.cloudinary.Transformation()
+                            .width(400).height(400).crop("fill").gravity("face")
+            ));
 
-            // Llamar al método privado
-            return crearAtsPrivado(request, numeroRegistro);
-        } catch (Exception e) {
-            throw new RuntimeException("Error al crear ATS: " + e.getMessage(), e);
+            String fotoUrl = (String) uploadResult.get("secure_url");
+
+            // CORRECCIÓN: Usar SsomaParticipanteFoto directamente, no .Foto
+            SsomaParticipanteFoto fotoEntity = SsomaParticipanteFoto.builder()
+                    .participante(participante)
+                    .fotoUrl(fotoUrl)
+                    .tipoFoto(tipoFoto != null ?
+                            SsomaParticipanteFoto.TipoFoto.valueOf(tipoFoto) :
+                            SsomaParticipanteFoto.TipoFoto.FRONTAL)
+                    .build();
+
+            participanteFotoRepository.save(fotoEntity);
+
+        } catch (IOException e) {
+            log.error("Error al subir foto del participante: {}", participante.getIdParticipante(), e);
+            throw new RuntimeException("Error al subir foto: " + e.getMessage());
         }
     }
 
-    private AtsResponse crearAtsPrivado(AtsRequest request, String numeroRegistro) {
-        if (request == null) {
-            throw new IllegalArgumentException("La solicitud ATS no puede ser nula");
-        }
+    private void crearSecuenciasTarea(SsomaFormulario formulario, List<SecuenciaTareaDTO> secuenciasDTO) {
+        if (secuenciasDTO == null) return;
 
-        // Crear ATS principal
-        Ats ats = new Ats();
-        ats.setFecha(LocalDate.now()); // Automático
-        ats.setHora(LocalTime.now()); // Automático
-        ats.setNumeroRegistro(numeroRegistro);
-        ats.setEmpresa(request.getEmpresa());
-        ats.setLugarTrabajo(request.getLugarTrabajo());
-        ats.setCoordenadas(request.getCoordenadas());
+        secuenciasDTO.forEach(dto -> {
+            SsomaSecuenciaTarea secuencia = SsomaSecuenciaTarea.builder()
+                    .ssomaFormulario(formulario)
+                    .secuenciaTarea(dto.getSecuenciaTarea())
+                    .peligro(dto.getPeligro())
+                    .riesgo(dto.getRiesgo())
+                    .consecuencias(dto.getConsecuencias())
+                    .medidasControl(dto.getMedidasControl())
+                    .orden(dto.getOrden())
+                    .build();
 
-        // Relación con OT
-        if (request.getIdOts() != null) {
-            Ots ot = otsRepository.findById(request.getIdOts())
-                    .orElseThrow(() -> new RuntimeException("OT no encontrada con ID: " + request.getIdOts()));
-            ats.setOts(ot);
-        }
-
-        // Personas (supervisor, responsable, SST)
-        if (request.getIdSupervisorTrabajo() != null) {
-            Trabajador supervisor = trabajadorRepository.findById(request.getIdSupervisorTrabajo())
-                    .orElseThrow(() -> new RuntimeException("Supervisor no encontrado con ID: " + request.getIdSupervisorTrabajo()));
-            ats.setSupervisorTrabajo(supervisor);
-        }
-
-        if (request.getIdResponsableLugar() != null) {
-            Trabajador responsable = trabajadorRepository.findById(request.getIdResponsableLugar())
-                    .orElseThrow(() -> new RuntimeException("Responsable no encontrado con ID: " + request.getIdResponsableLugar()));
-            ats.setResponsableLugar(responsable);
-        }
-
-        if (request.getIdSupervisorSst() != null) {
-            Trabajador supervisorSst = trabajadorRepository.findById(request.getIdSupervisorSst())
-                    .orElseThrow(() -> new RuntimeException("Supervisor SST no encontrado con ID: " + request.getIdSupervisorSst()));
-            ats.setSupervisorSst(supervisorSst);
-        }
-
-        // Trabajo
-        if (request.getIdTrabajo() != null) {
-            Trabajo trabajo = trabajoRepository.findById(request.getIdTrabajo())
-                    .orElseThrow(() -> new RuntimeException("Trabajo no encontrado con ID: " + request.getIdTrabajo()));
-            ats.setTrabajo(trabajo);
-        }
-
-        Ats atsGuardado = atsRepository.save(ats);
-
-        // Guardar participantes
-        if (request.getParticipantes() != null && !request.getParticipantes().isEmpty()) {
-            for (AtsParticipanteRequest participanteReq : request.getParticipantes()) {
-                if (participanteReq != null && participanteReq.getIdTrabajador() != null) {
-                    AtsParticipante participante = new AtsParticipante();
-                    participante.setAts(atsGuardado);
-
-                    Trabajador trabajador = trabajadorRepository.findById(participanteReq.getIdTrabajador())
-                            .orElseThrow(() -> new RuntimeException("Trabajador participante no encontrado con ID: " + participanteReq.getIdTrabajador()));
-                    participante.setTrabajador(trabajador);
-
-                    if (participanteReq.getIdRol() != null) {
-                        RolTrabajo rol = rolTrabajoRepository.findById(participanteReq.getIdRol())
-                                .orElseThrow(() -> new RuntimeException("Rol no encontrado con ID: " + participanteReq.getIdRol()));
-                        participante.setRol(rol);
-                    }
-
-                    atsParticipanteRepository.save(participante);
-                }
-            }
-        }
-
-        // Guardar riesgos (secuencia tarea -> peligro -> riesgo -> medida control)
-        if (request.getRiesgos() != null && !request.getRiesgos().isEmpty()) {
-            for (AtsRiesgoRequest riesgoReq : request.getRiesgos()) {
-                if (riesgoReq != null) {
-                    AtsRiesgo riesgo = new AtsRiesgo();
-                    riesgo.setAts(atsGuardado);
-
-                    // Tarea
-                    if (riesgoReq.getIdTarea() != null) {
-                        Tarea tarea = tareaRepository.findById(riesgoReq.getIdTarea())
-                                .orElseThrow(() -> new RuntimeException("Tarea no encontrada con ID: " + riesgoReq.getIdTarea()));
-                        riesgo.setTarea(tarea);
-                    }
-
-                    // Peligro
-                    if (riesgoReq.getIdPeligro() != null) {
-                        Peligro peligro = peligroRepository.findById(riesgoReq.getIdPeligro())
-                                .orElseThrow(() -> new RuntimeException("Peligro no encontrado con ID: " + riesgoReq.getIdPeligro()));
-                        riesgo.setPeligro(peligro);
-                    }
-
-                    // Riesgo
-                    if (riesgoReq.getIdRiesgo() != null) {
-                        Riesgo riesgoCatalogo = riesgoRepository.findById(riesgoReq.getIdRiesgo())
-                                .orElseThrow(() -> new RuntimeException("Riesgo no encontrado con ID: " + riesgoReq.getIdRiesgo()));
-                        riesgo.setRiesgo(riesgoCatalogo);
-                    }
-
-                    // Medida de control
-                    if (riesgoReq.getIdMedida() != null) {
-                        MedidaControl medida = medidaControlRepository.findById(riesgoReq.getIdMedida())
-                                .orElseThrow(() -> new RuntimeException("Medida de control no encontrada con ID: " + riesgoReq.getIdMedida()));
-                        riesgo.setMedida(medida);
-                    }
-
-                    // Observación opcional
-                    if (riesgoReq.getObservacion() != null) {
-                        riesgo.setObservacion(riesgoReq.getObservacion());
-                    }
-
-                    atsRiesgoRepository.save(riesgo);
-                }
-            }
-        }
-
-        // Guardar EPP
-        if (request.getEppIds() != null && !request.getEppIds().isEmpty()) {
-            for (Integer eppId : request.getEppIds()) {
-                if (eppId != null) {
-                    AtsEpp atsEpp = new AtsEpp();
-                    atsEpp.setAts(atsGuardado);
-
-                    Epp epp = eppRepository.findById(eppId)
-                            .orElseThrow(() -> new RuntimeException("EPP no encontrado con ID: " + eppId));
-                    atsEpp.setEpp(epp);
-
-                    atsEppRepository.save(atsEpp);
-                }
-            }
-        }
-
-        // Guardar tipos de riesgo
-        if (request.getTipoRiesgoIds() != null && !request.getTipoRiesgoIds().isEmpty()) {
-            for (Integer tipoRiesgoId : request.getTipoRiesgoIds()) {
-                if (tipoRiesgoId != null) {
-                    AtsTipoRiesgo tipoRiesgo = new AtsTipoRiesgo();
-                    tipoRiesgo.setAts(atsGuardado);
-
-                    TipoRiesgoTrabajo tipoRiesgoObj = tipoRiesgoTrabajoRepository.findById(tipoRiesgoId)
-                            .orElseThrow(() -> new RuntimeException("Tipo riesgo no encontrado con ID: " + tipoRiesgoId));
-                    tipoRiesgo.setTipoRiesgo(tipoRiesgoObj);
-
-                    atsTipoRiesgoRepository.save(tipoRiesgo);
-                }
-            }
-        }
-
-        // Construir respuesta
-        return construirAtsResponse(atsGuardado);
+            secuenciaTareaRepository.save(secuencia);
+        });
     }
 
-    private AtsResponse construirAtsResponse(Ats ats) {
-        AtsResponse response = new AtsResponse();
-        response.setIdAts(ats.getIdAts());
-        response.setFecha(ats.getFecha());
-        response.setHora(ats.getHora());
-        response.setNumeroRegistro(ats.getNumeroRegistro());
-        response.setEmpresa(ats.getEmpresa());
-        response.setLugarTrabajo(ats.getLugarTrabajo());
-        response.setCoordenadas(ats.getCoordenadas());
+    private void crearChecklistSeguridad(SsomaFormulario formulario, List<ChecklistSeguridadDTO> checklistDTO) {
+        if (checklistDTO == null) return;
 
-        // Información de OT
-        if (ats.getOts() != null) {
-            response.setIdOts(ats.getOts().getIdOts());
-            response.setCodigoOt(ats.getOts().getOt());
+        checklistDTO.forEach(dto -> {
+            SsomaChecklistSeguridad checklist = SsomaChecklistSeguridad.builder()
+                    .ssomaFormulario(formulario)
+                    .itemNombre(dto.getItemNombre())
+                    .usado(dto.getUsado())
+                    .observaciones(dto.getObservaciones())
+                    .build();
+
+            SsomaChecklistSeguridad checklistGuardado = checklistSeguridadRepository.save(checklist);
+
+            // Subir foto si existe
+            if (dto.getFoto() != null) {
+                subirFotoChecklist(checklistGuardado, dto.getFoto());
+            }
+        });
+    }
+
+    private void subirFotoChecklist(SsomaChecklistSeguridad checklist, MultipartFile fotoFile) {
+        try {
+            Map uploadResult = cloudinaryService.upload(fotoFile, Map.of(
+                    "folder", "ssoma/checklist_seguridad"
+            ));
+
+            String fotoUrl = (String) uploadResult.get("secure_url");
+
+            SsomaChecklistFoto foto = SsomaChecklistFoto.builder()
+                    .checklistSeguridad(checklist)
+                    .fotoUrl(fotoUrl)
+                    .build();
+
+            checklistFotoRepository.save(foto);
+
+        } catch (IOException e) {
+            log.error("Error al subir foto del checklist: {}", checklist.getIdChecklist(), e);
+            throw new RuntimeException("Error al subir foto: " + e.getMessage());
+        }
+    }
+
+    private void crearEppChecks(
+            SsomaFormulario formulario,
+            List<EppCheckDTO> eppChecksDTO,
+            List<SsomaRequestDTO.FotoEpp> fotosEpp) {
+
+        if (eppChecksDTO == null) return;
+
+        AtomicInteger index = new AtomicInteger(0);
+        eppChecksDTO.forEach(dto -> {
+            SsomaEppCheck eppCheck = SsomaEppCheck.builder()
+                    .ssomaFormulario(formulario)
+                    .eppNombre(dto.getEppNombre())
+                    .usado(dto.getUsado())
+                    .build();
+
+            SsomaEppCheck eppCheckGuardado = eppCheckRepository.save(eppCheck);
+
+            // Subir foto del EPP si existe en dto
+            if (dto.getFoto() != null) {
+                subirFotoEpp(eppCheckGuardado, dto.getFoto());
+            }
+
+            // O subir foto de la lista de fotosEpp
+            if (fotosEpp != null) {
+                fotosEpp.stream()
+                        .filter(foto -> foto.getEppIndex() != null &&
+                                foto.getEppIndex().equals(index.get()))
+                        .forEach(foto -> subirFotoEpp(eppCheckGuardado, foto.getFoto()));
+            }
+
+            index.incrementAndGet();
+        });
+    }
+
+    private void subirFotoEpp(SsomaEppCheck eppCheck, MultipartFile fotoFile) {
+        try {
+            Map uploadResult = cloudinaryService.upload(fotoFile, Map.of(
+                    "folder", "ssoma/epp"
+            ));
+
+            String fotoUrl = (String) uploadResult.get("secure_url");
+
+            SsomaEppFoto foto = SsomaEppFoto.builder()
+                    .eppCheck(eppCheck)
+                    .fotoUrl(fotoUrl)
+                    .build();
+
+            eppFotoRepository.save(foto);
+
+        } catch (IOException e) {
+            log.error("Error al subir foto del EPP: {}", eppCheck.getIdEpp(), e);
+            throw new RuntimeException("Error al subir foto: " + e.getMessage());
+        }
+    }
+
+    private void crearCharla(
+            SsomaFormulario formulario,
+            CharlaDTO charlaDTO,
+            SsomaRequestDTO.VideoCharla videoCharla) {
+
+        // Obtener tema
+        SsomaTemaCharla tema = null;
+        if (charlaDTO.getTemaId() != null) {
+            tema = temaCharlaRepository.findById(charlaDTO.getTemaId())
+                    .orElse(null);
         }
 
-        // Información de Trabajo
-        if (ats.getTrabajo() != null) {
-            response.setIdTrabajo(ats.getTrabajo().getIdTrabajo());
-            response.setNombreTrabajo(ats.getTrabajo().getNombre());
+        // Obtener capacitador
+        Trabajador capacitador = null;
+        if (charlaDTO.getCapacitadorId() != null) {
+            capacitador = trabajadorRepository.findById(charlaDTO.getCapacitadorId())
+                    .orElse(null);
         }
 
-        // Información de personas
-        if (ats.getSupervisorTrabajo() != null) {
-            response.setIdSupervisorTrabajo(ats.getSupervisorTrabajo().getIdTrabajador());
-            response.setNombreSupervisorTrabajo(
-                    ats.getSupervisorTrabajo().getNombres() + " " +
-                            ats.getSupervisorTrabajo().getApellidos()
-            );
+        // Crear charla
+        SsomaCharla charla = SsomaCharla.builder()
+                .ssomaFormulario(formulario)
+                .tema(tema)
+                .fechaCharla(charlaDTO.getFechaCharla() != null ?
+                        charlaDTO.getFechaCharla() : LocalDateTime.now())
+                .duracionHoras(charlaDTO.getDuracionHoras())
+                .capacitador(capacitador)
+                .build();
+
+        SsomaCharla charlaGuardada = charlaRepository.save(charla);
+
+        // Subir video si existe
+        if (videoCharla != null && videoCharla.getVideo() != null) {
+            subirVideoCharla(charlaGuardada, videoCharla.getVideo(), videoCharla.getDuracionSegundos());
+        }
+    }
+
+    private void subirVideoCharla(SsomaCharla charla, MultipartFile videoFile, Integer duracionSegundos) {
+        try {
+            Map uploadResult = cloudinaryService.upload(videoFile, Map.of(
+                    "folder", "ssoma/videos_charla",
+                    "resource_type", "video",
+                    "eager", List.of(Map.of("format", "mp4")), // Generar formato MP4
+                    "eager_async", true // Procesamiento asíncrono para videos largos
+            ));
+
+            String videoUrl = (String) uploadResult.get("secure_url");
+
+            SsomaCharlaVideo video = SsomaCharlaVideo.builder()
+                    .charla(charla)
+                    .videoUrl(videoUrl)
+                    .duracionSegundos(duracionSegundos)
+                    .fechaSubida(LocalDateTime.now())
+                    .build();
+
+            charlaVideoRepository.save(video);
+
+        } catch (IOException e) {
+            log.error("Error al subir video de charla: {}", charla.getIdCharla(), e);
+            throw new RuntimeException("Error al subir video: " + e.getMessage());
+        }
+    }
+
+    private void crearInspeccionesTrabajador(
+            SsomaFormulario formulario,
+            List<InspeccionTrabajadorDTO> inspeccionesDTO) {
+
+        if (inspeccionesDTO == null) return;
+
+        inspeccionesDTO.forEach(dto -> {
+            // Obtener trabajador
+            Trabajador trabajador = null;
+            if (dto.getTrabajadorId() != null) {
+                trabajador = trabajadorRepository.findById(dto.getTrabajadorId())
+                        .orElse(null);
+            }
+
+            // Obtener responsable
+            Trabajador responsable = null;
+            if (dto.getResponsableId() != null) {
+                responsable = trabajadorRepository.findById(dto.getResponsableId())
+                        .orElse(null);
+            }
+
+            SsomaInspeccionTrabajador inspeccion = SsomaInspeccionTrabajador.builder()
+                    .ssomaFormulario(formulario)
+                    .tipoInspeccion(dto.getTipoInspeccion() != null ?
+                            SsomaInspeccionTrabajador.TipoInspeccion.valueOf(dto.getTipoInspeccion()) :
+                            SsomaInspeccionTrabajador.TipoInspeccion.PLANIFICADA)
+                    .trabajador(trabajador)
+                    .trabajadorNombre(dto.getTrabajadorNombre())
+                    .casco(dto.getCasco())
+                    .lentes(dto.getLentes())
+                    .orejeras(dto.getOrejeras())
+                    .tapones(dto.getTapones())
+                    .guantes(dto.getGuantes())
+                    .botas(dto.getBotas())
+                    .arnes(dto.getArnes())
+                    .chaleco(dto.getChaleco())
+                    .mascarilla(dto.getMascarilla())
+                    .gafas(dto.getGafas())
+                    .otros(dto.getOtros())
+                    .accionCorrectiva(dto.getAccionCorrectiva())
+                    .seguimiento(dto.getSeguimiento())
+                    .responsable(responsable)
+                    .build();
+
+            inspeccionTrabajadorRepository.save(inspeccion);
+        });
+    }
+
+    private void crearHerramientasInspeccion(
+            SsomaFormulario formulario,
+            List<HerramientaInspeccionDTO> herramientasDTO,
+            List<SsomaRequestDTO.FotoHerramienta> fotosHerramientas) {
+
+        if (herramientasDTO == null) return;
+
+        AtomicInteger index = new AtomicInteger(0);
+        herramientasDTO.forEach(dto -> {
+            // Obtener herramienta maestra
+            SsomaHerramientaMaestra herramientaMaestra = null;
+            if (dto.getHerramientaMaestraId() != null) {
+                herramientaMaestra = herramientaMaestraRepository.findById(dto.getHerramientaMaestraId())
+                        .orElse(null);
+            }
+
+            SsomaHerramientaInspeccion herramienta = SsomaHerramientaInspeccion.builder()
+                    .ssomaFormulario(formulario)
+                    .herramientaMaestra(herramientaMaestra)
+                    .herramientaNombre(dto.getHerramientaNombre())
+                    .p1(dto.getP1())
+                    .p2(dto.getP2())
+                    .p3(dto.getP3())
+                    .p4(dto.getP4())
+                    .p5(dto.getP5())
+                    .p6(dto.getP6())
+                    .p7(dto.getP7())
+                    .p8(dto.getP8())
+                    .observaciones(dto.getObservaciones())
+                    .build();
+
+            SsomaHerramientaInspeccion herramientaGuardada = herramientaInspeccionRepository.save(herramienta);
+
+            // Subir foto de la herramienta si existe en dto
+            if (dto.getFoto() != null) {
+                subirFotoHerramienta(herramientaGuardada, dto.getFoto());
+            }
+
+            // O subir foto de la lista de fotosHerramientas
+            if (fotosHerramientas != null) {
+                fotosHerramientas.stream()
+                        .filter(foto -> foto.getHerramientaIndex() != null &&
+                                foto.getHerramientaIndex().equals(index.get()))
+                        .forEach(foto -> subirFotoHerramienta(herramientaGuardada, foto.getFoto()));
+            }
+
+            index.incrementAndGet();
+        });
+    }
+
+    private void subirFotoHerramienta(SsomaHerramientaInspeccion herramienta, MultipartFile fotoFile) {
+        try {
+            Map uploadResult = cloudinaryService.upload(fotoFile, Map.of(
+                    "folder", "ssoma/herramientas"
+            ));
+
+            String fotoUrl = (String) uploadResult.get("secure_url");
+
+            SsomaHerramientaFoto foto = SsomaHerramientaFoto.builder()
+                    .herramientaInspeccion(herramienta)
+                    .fotoUrl(fotoUrl)
+                    .build();
+
+            herramientaFotoRepository.save(foto);
+
+        } catch (IOException e) {
+            log.error("Error al subir foto de herramienta: {}", herramienta.getIdHerramienta(), e);
+            throw new RuntimeException("Error al subir foto: " + e.getMessage());
+        }
+    }
+
+    private void crearPetar(SsomaFormulario formulario, PetarDTO petarDTO) {
+        SsomaPetar petar = SsomaPetar.builder()
+                .ssomaFormulario(formulario)
+                .energiaPeligrosa(petarDTO.getEnergiaPeligrosa())
+                .trabajoAltura(petarDTO.getTrabajoAltura())
+                .izaje(petarDTO.getIzaje())
+                .excavacion(petarDTO.getExcavacion())
+                .espaciosConfinados(petarDTO.getEspaciosConfinados())
+                .trabajoCaliente(petarDTO.getTrabajoCaliente())
+                .otros(petarDTO.getOtros())
+                .otrosDescripcion(petarDTO.getOtrosDescripcion())
+                .velocidadAire(petarDTO.getVelocidadAire())
+                .contenidoOxigeno(petarDTO.getContenidoOxigeno())
+                .horaInicioPetar(petarDTO.getHoraInicioPetar())
+                .horaFinPetar(petarDTO.getHoraFinPetar())
+                .build();
+
+        SsomaPetar petarGuardado = petarRepository.save(petar);
+
+        // Crear respuestas PETAR
+        if (petarDTO.getRespuestas() != null) {
+            crearPetarRespuestas(petarGuardado, petarDTO.getRespuestas());
         }
 
-        if (ats.getResponsableLugar() != null) {
-            response.setIdResponsableLugar(ats.getResponsableLugar().getIdTrabajador());
-            response.setNombreResponsableLugar(
-                    ats.getResponsableLugar().getNombres() + " " +
-                            ats.getResponsableLugar().getApellidos()
-            );
+        // Crear equipos de protección
+        if (petarDTO.getEquiposProteccion() != null) {
+            crearEquiposProteccion(petarGuardado, petarDTO.getEquiposProteccion());
         }
+    }
 
-        if (ats.getSupervisorSst() != null) {
-            response.setIdSupervisorSst(ats.getSupervisorSst().getIdTrabajador());
-            response.setNombreSupervisorSst(
-                    ats.getSupervisorSst().getNombres() + " " +
-                            ats.getSupervisorSst().getApellidos()
-            );
-        }
+    private void crearPetarRespuestas(SsomaPetar petar, List<PetarRespuestaDTO> respuestasDTO) {
+        respuestasDTO.forEach(dto -> {
+            // Obtener pregunta maestra
+            SsomaPetarPreguntaMaestra pregunta = null;
+            if (dto.getPreguntaId() != null) {
+                pregunta = petarPreguntaMaestraRepository.findById(dto.getPreguntaId())
+                        .orElse(null);
+            }
+
+            SsomaPetarRespuesta respuesta = SsomaPetarRespuesta.builder()
+                    .petar(petar)
+                    .pregunta(pregunta)
+                    .respuesta(dto.getRespuesta())
+                    .observaciones(dto.getObservaciones())
+                    .build();
+
+            petarRespuestaRepository.save(respuesta);
+        });
+    }
+
+    private void crearEquiposProteccion(SsomaPetar petar, List<EquipoProteccionDTO> equiposDTO) {
+        equiposDTO.forEach(dto -> {
+            SsomaEquipoProteccion equipo = SsomaEquipoProteccion.builder()
+                    .petar(petar)
+                    .equipoNombre(dto.getEquipoNombre())
+                    .usado(dto.getUsado())
+                    .build();
+
+            equipoProteccionRepository.save(equipo);
+        });
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public SsomaResponseDTO obtenerFormularioCompleto(Integer idSsoma) {
+        log.info("Obteniendo formulario SSOMA completo con ID: {}", idSsoma);
+
+        SsomaFormulario formulario = ssomaFormularioRepository.findById(idSsoma)
+                .orElseThrow(() -> new RuntimeException("Formulario SSOMA no encontrado con ID: " + idSsoma));
+
+        return convertirAResponseDTO(formulario);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<SsomaResponseDTO> obtenerFormulariosPorOt(Integer idOts) {
+        log.info("Obteniendo formularios SSOMA para OT: {}", idOts);
+
+        List<SsomaFormulario> formularios = ssomaFormularioRepository.findByOtsIdOts(idOts);
+
+        return formularios.stream()
+                .map(this::convertirAResponseDTO)
+                .collect(Collectors.toList());
+    }
+
+    private SsomaResponseDTO convertirAResponseDTO(SsomaFormulario formulario) {
+        // Cargar todas las relaciones necesarias
+        SsomaResponseDTO response = SsomaResponseDTO.builder()
+                .idSsoma(formulario.getIdSsoma())
+                .idOts(formulario.getOts().getIdOts())
+                .empresaNombre(formulario.getEmpresa() != null ? formulario.getEmpresa().getNombre() : null)
+                .trabajoNombre(formulario.getTrabajo() != null ? formulario.getTrabajo().getDescripcion() : null)
+                .latitud(formulario.getLatitud())
+                .longitud(formulario.getLongitud())
+                .fecha(formulario.getFecha())
+                .horaInicio(formulario.getHoraInicio())
+                .horaFin(formulario.getHoraFin())
+                .horaInicioTrabajo(formulario.getHoraInicioTrabajo())
+                .horaFinTrabajo(formulario.getHoraFinTrabajo())
+                .supervisorTrabajo(formulario.getSupervisorTrabajo())
+                .supervisorSst(formulario.getSupervisorSst())
+                .responsableArea(formulario.getResponsableArea())
+                .build();
+
+        // Obtener participantes
+        List<SsomaParticipante> participantes = participanteRepository.findBySsomaFormularioIdSsoma(formulario.getIdSsoma());
+        response.setParticipantes(convertirParticipantesAResponse(participantes));
+
+        // Obtener secuencias de tarea
+        List<SsomaSecuenciaTarea> secuencias = secuenciaTareaRepository.findBySsomaFormularioIdSsoma(formulario.getIdSsoma());
+        response.setSecuenciasTarea(convertirSecuenciasAResponse(secuencias));
+
+        // Obtener checklist seguridad
+        List<SsomaChecklistSeguridad> checklist = checklistSeguridadRepository.findBySsomaFormularioIdSsoma(formulario.getIdSsoma());
+        response.setChecklistSeguridad(convertirChecklistAResponse(checklist));
+
+        // Obtener EPP checks
+        List<SsomaEppCheck> eppChecks = eppCheckRepository.findBySsomaFormularioIdSsoma(formulario.getIdSsoma());
+        response.setEppChecks(convertirEppChecksAResponse(eppChecks));
+
+        // Obtener charla
+        Optional<SsomaCharla> charlaOpt = charlaRepository.findBySsomaFormularioIdSsoma(formulario.getIdSsoma());
+        charlaOpt.ifPresent(charla -> response.setCharla(convertirCharlaAResponse(charla)));
+
+        // Obtener inspecciones trabajador
+        List<SsomaInspeccionTrabajador> inspecciones = inspeccionTrabajadorRepository.findBySsomaFormularioIdSsoma(formulario.getIdSsoma());
+        response.setInspeccionesTrabajador(convertirInspeccionesAResponse(inspecciones));
+
+        // Obtener herramientas inspección
+        List<SsomaHerramientaInspeccion> herramientas = herramientaInspeccionRepository.findBySsomaFormularioIdSsoma(formulario.getIdSsoma());
+        response.setHerramientasInspeccion(convertirHerramientasAResponse(herramientas));
+
+        // Obtener PETAR
+        Optional<SsomaPetar> petarOpt = petarRepository.findBySsomaFormularioIdSsoma(formulario.getIdSsoma());
+        petarOpt.ifPresent(petar -> response.setPetar(convertirPetarAResponse(petar)));
 
         return response;
     }
 
+    private List<ParticipanteResponseDTO> convertirParticipantesAResponse(List<SsomaParticipante> participantes) {
+        return participantes.stream().map(p -> {
+            List<String> fotoUrls = participanteFotoRepository.findByParticipanteIdParticipante(p.getIdParticipante())
+                    .stream()
+                    .map(SsomaParticipanteFoto::getFotoUrl)
+                    .collect(Collectors.toList());
 
+            String firmaUrl = participanteFirmaRepository.findByParticipanteIdParticipante(p.getIdParticipante())
+                    .map(SsomaParticipanteFirma::getFirmaUrl)
+                    .orElse(null);
 
-
-    @Override
-    public AtsResponse obtenerAtsPorId(Integer id) {
-        Ats ats = atsRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("ATS no encontrado"));
-        return convertirAtsAResponse(ats);
+            return ParticipanteResponseDTO.builder()
+                    .idParticipante(p.getIdParticipante())
+                    .nombre(p.getNombre())
+                    .cargo(p.getCargo())
+                    .firmaUrl(firmaUrl)
+                    .fotoUrls(fotoUrls)
+                    .build();
+        }).collect(Collectors.toList());
     }
 
-    @Override
-    public List<AtsResponse> listarTodosAts() {
-        return atsRepository.findAll().stream()
-                .map(this::convertirAtsAResponse)
-                .toList();
+    private List<SecuenciaTareaResponseDTO> convertirSecuenciasAResponse(List<SsomaSecuenciaTarea> secuencias) {
+        return secuencias.stream().map(s -> SecuenciaTareaResponseDTO.builder()
+                        .secuenciaTarea(s.getSecuenciaTarea())
+                        .peligro(s.getPeligro())
+                        .riesgo(s.getRiesgo())
+                        .consecuencias(s.getConsecuencias())
+                        .medidasControl(s.getMedidasControl())
+                        .build())
+                .collect(Collectors.toList());
     }
 
-    // =====================================================
-    // 2. CREAR CAPACITACIÓN
-    // =====================================================
+    private List<ChecklistSeguridadResponseDTO> convertirChecklistAResponse(List<SsomaChecklistSeguridad> checklist) {
+        return checklist.stream().map(c -> {
+            List<String> fotoUrls = checklistFotoRepository.findByChecklistSeguridadIdChecklist(c.getIdChecklist())
+                    .stream()
+                    .map(SsomaChecklistFoto::getFotoUrl)
+                    .collect(Collectors.toList());
 
-    @Override
-    @Transactional
-    public CapacitacionResponse crearCapacitacion(CapacitacionRequest request) {
-        Capacitacion capacitacion = new Capacitacion();
-        capacitacion.setNumeroRegistro(generarNumeroRegistro("CAP"));
-        capacitacion.setTema(request.getTema());
-        capacitacion.setFecha(LocalDate.now());
-        capacitacion.setHora(LocalTime.now());
-        capacitacion.setTipoCharla(request.getTipoCharla() != null ? request.getTipoCharla() : "CHARLA_5_MINUTOS");
-
-        // Relación con OT
-        if (request.getIdOts() != null) {
-            Ots ot = otsRepository.findById(request.getIdOts())
-                    .orElseThrow(() -> new RuntimeException("OT no encontrada"));
-            capacitacion.setOts(ot);
-        }
-
-        // Personas
-        if (request.getIdCapacitador() != null) {
-            capacitacion.setCapacitador(trabajadorRepository.findById(request.getIdCapacitador()).orElse(null));
-        }
-        if (request.getIdSupervisorTrabajo() != null) {
-            capacitacion.setSupervisorTrabajo(trabajadorRepository.findById(request.getIdSupervisorTrabajo()).orElse(null));
-        }
-        if (request.getIdResponsableLugar() != null) {
-            capacitacion.setResponsableLugar(trabajadorRepository.findById(request.getIdResponsableLugar()).orElse(null));
-        }
-        if (request.getIdSupervisorSst() != null) {
-            capacitacion.setSupervisorSst(trabajadorRepository.findById(request.getIdSupervisorSst()).orElse(null));
-        }
-
-        Capacitacion capacitacionGuardada = capacitacionRepository.save(capacitacion);
-
-        // Guardar asistentes
-        if (request.getAsistentes() != null && !request.getAsistentes().isEmpty()) {
-            for (CapacitacionAsistenteRequest asistenteReq : request.getAsistentes()) {
-                CapacitacionAsistente asistente = new CapacitacionAsistente();
-                asistente.setCapacitacion(capacitacionGuardada);
-
-                Trabajador trabajador = trabajadorRepository.findById(asistenteReq.getIdTrabajador())
-                        .orElseThrow(() -> new RuntimeException("Trabajador no encontrado"));
-                asistente.setTrabajador(trabajador);
-
-                asistente.setObservaciones(asistenteReq.getObservaciones());
-                capacitacionAsistenteRepository.save(asistente);
-            }
-        }
-
-        return convertirCapacitacionAResponse(capacitacionGuardada);
+            return ChecklistSeguridadResponseDTO.builder()
+                    .itemNombre(c.getItemNombre())
+                    .usado(c.getUsado())
+                    .observaciones(c.getObservaciones())
+                    .fotoUrls(fotoUrls)
+                    .build();
+        }).collect(Collectors.toList());
     }
 
-    @Override
-    public CapacitacionResponse obtenerCapacitacionPorId(Integer id) {
-        Capacitacion capacitacion = capacitacionRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Capacitación no encontrada"));
-        return convertirCapacitacionAResponse(capacitacion);
+    private List<EppCheckResponseDTO> convertirEppChecksAResponse(List<SsomaEppCheck> eppChecks) {
+        return eppChecks.stream().map(e -> {
+            List<String> fotoUrls = eppFotoRepository.findByEppCheckIdEpp(e.getIdEpp())
+                    .stream()
+                    .map(SsomaEppFoto::getFotoUrl)
+                    .collect(Collectors.toList());
+
+            return EppCheckResponseDTO.builder()
+                    .eppNombre(e.getEppNombre())
+                    .usado(e.getUsado())
+                    .fotoUrls(fotoUrls)
+                    .build();
+        }).collect(Collectors.toList());
     }
 
-    @Override
-    public List<CapacitacionResponse> listarTodasCapacitaciones() {
-        return capacitacionRepository.findAll().stream()
-                .map(this::convertirCapacitacionAResponse)
-                .toList();
+    private CharlaResponseDTO convertirCharlaAResponse(SsomaCharla charla) {
+        String videoUrl = charlaVideoRepository.findByCharlaIdCharla(charla.getIdCharla())
+                .map(SsomaCharlaVideo::getVideoUrl)
+                .orElse(null);
+
+        Integer duracionSegundos = charlaVideoRepository.findByCharlaIdCharla(charla.getIdCharla())
+                .map(SsomaCharlaVideo::getDuracionSegundos)
+                .orElse(null);
+
+        return CharlaResponseDTO.builder()
+                .temaNombre(charla.getTema() != null ? charla.getTema().getNombre() : null)
+                .fechaCharla(charla.getFechaCharla())
+                .duracionHoras(charla.getDuracionHoras())
+                .capacitadorNombre(charla.getCapacitador() != null ?
+                        charla.getCapacitador().getNombres() + " " + charla.getCapacitador().getApellidos() : null)
+                .videoUrl(videoUrl)
+                .duracionSegundos(duracionSegundos)
+                .build();
     }
 
-    // =====================================================
-    // 3. CREAR INSPECCIÓN EPP
-    // =====================================================
-
-    @Override
-    @Transactional
-    public InspeccionEppResponse crearInspeccionEpp(InspeccionEppRequest request) {
-        InspeccionEpp inspeccion = new InspeccionEpp();
-        inspeccion.setNumeroRegistro(generarNumeroRegistro("IEPP"));
-        inspeccion.setFecha(LocalDate.now());
-        inspeccion.setTipoInspeccion(request.getTipoInspeccion() != null ? request.getTipoInspeccion() : "PLANIFICADA");
-        inspeccion.setAreaTrabajo(request.getAreaTrabajo());
-
-        // Relación con OT
-        if (request.getIdOts() != null) {
-            Ots ot = otsRepository.findById(request.getIdOts())
-                    .orElseThrow(() -> new RuntimeException("OT no encontrada"));
-            inspeccion.setOts(ot);
-        }
-
-        // Personas
-        if (request.getIdInspector() != null) {
-            inspeccion.setInspector(trabajadorRepository.findById(request.getIdInspector()).orElse(null));
-        }
-        if (request.getIdSupervisorTrabajo() != null) {
-            inspeccion.setSupervisorTrabajo(trabajadorRepository.findById(request.getIdSupervisorTrabajo()).orElse(null));
-        }
-        if (request.getIdResponsableLugar() != null) {
-            inspeccion.setResponsableLugar(trabajadorRepository.findById(request.getIdResponsableLugar()).orElse(null));
-        }
-        if (request.getIdSupervisorSst() != null) {
-            inspeccion.setSupervisorSst(trabajadorRepository.findById(request.getIdSupervisorSst()).orElse(null));
-        }
-
-        InspeccionEpp inspeccionGuardada = inspeccionEppRepository.save(inspeccion);
-
-        // Guardar detalles
-        if (request.getDetalles() != null && !request.getDetalles().isEmpty()) {
-            for (InspeccionEppDetalleRequest detalleReq : request.getDetalles()) {
-                InspeccionEppDetalle detalle = new InspeccionEppDetalle();
-                detalle.setInspeccion(inspeccionGuardada);
-
-                Trabajador trabajador = trabajadorRepository.findById(detalleReq.getIdTrabajador())
-                        .orElseThrow(() -> new RuntimeException("Trabajador no encontrado"));
-                detalle.setTrabajador(trabajador);
-
-                Epp epp = eppRepository.findById(detalleReq.getIdEpp()).orElse(null);
-                detalle.setEpp(epp);
-
-                detalle.setCumple(detalleReq.getCumple());
-                detalle.setObservacion(detalleReq.getObservacion());
-                detalle.setAccionCorrectiva(detalleReq.getAccionCorrectiva());
-
-                inspeccionEppDetalleRepository.save(detalle);
-            }
-        }
-
-        return convertirInspeccionEppAResponse(inspeccionGuardada);
+    private List<InspeccionTrabajadorResponseDTO> convertirInspeccionesAResponse(List<SsomaInspeccionTrabajador> inspecciones) {
+        return inspecciones.stream().map(i -> InspeccionTrabajadorResponseDTO.builder()
+                        .tipoInspeccion(i.getTipoInspeccion().name())
+                        .trabajadorNombre(i.getTrabajadorNombre())
+                        .casco(i.getCasco())
+                        .lentes(i.getLentes())
+                        .orejeras(i.getOrejeras())
+                        .tapones(i.getTapones())
+                        .guantes(i.getGuantes())
+                        .botas(i.getBotas())
+                        .arnes(i.getArnes())
+                        .chaleco(i.getChaleco())
+                        .mascarilla(i.getMascarilla())
+                        .gafas(i.getGafas())
+                        .otros(i.getOtros())
+                        .accionCorrectiva(i.getAccionCorrectiva())
+                        .seguimiento(i.getSeguimiento())
+                        .responsableNombre(i.getResponsable() != null ?
+                                i.getResponsable().getNombres() + " " + i.getResponsable().getApellidos() : null)
+                        .build())
+                .collect(Collectors.toList());
     }
 
-    @Override
-    public InspeccionEppResponse obtenerInspeccionEppPorId(Integer id) {
-        InspeccionEpp inspeccion = inspeccionEppRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Inspección EPP no encontrada"));
-        return convertirInspeccionEppAResponse(inspeccion);
+    private List<HerramientaInspeccionResponseDTO> convertirHerramientasAResponse(List<SsomaHerramientaInspeccion> herramientas) {
+        return herramientas.stream().map(h -> {
+            List<String> fotoUrls = herramientaFotoRepository.findByHerramientaInspeccionIdHerramienta(h.getIdHerramienta())
+                    .stream()
+                    .map(SsomaHerramientaFoto::getFotoUrl)
+                    .collect(Collectors.toList());
+
+            return HerramientaInspeccionResponseDTO.builder()
+                    .herramientaNombre(h.getHerramientaNombre())
+                    .p1(h.getP1())
+                    .p2(h.getP2())
+                    .p3(h.getP3())
+                    .p4(h.getP4())
+                    .p5(h.getP5())
+                    .p6(h.getP6())
+                    .p7(h.getP7())
+                    .p8(h.getP8())
+                    .observaciones(h.getObservaciones())
+                    .fotoUrls(fotoUrls)
+                    .build();
+        }).collect(Collectors.toList());
     }
 
-    @Override
-    public List<InspeccionEppResponse> listarTodasInspeccionesEpp() {
-        return inspeccionEppRepository.findAll().stream()
-                .map(this::convertirInspeccionEppAResponse)
-                .toList();
-    }
+    private PetarResponseDTO convertirPetarAResponse(SsomaPetar petar) {
+        // Obtener respuestas
+        List<SsomaPetarRespuesta> respuestas = petarRespuestaRepository.findByPetarIdPetar(petar.getIdPetar());
+        List<PetarRespuestaResponseDTO> respuestasDTO = respuestas.stream().map(r -> {
+            String preguntaTexto = r.getPregunta() != null ? r.getPregunta().getPregunta() : null;
+            return PetarRespuestaResponseDTO.builder()
+                    .pregunta(preguntaTexto)
+                    .respuesta(r.getRespuesta())
+                    .observaciones(r.getObservaciones())
+                    .build();
+        }).collect(Collectors.toList());
 
-    // =====================================================
-    // 4. CREAR INSPECCIÓN HERRAMIENTAS
-    // =====================================================
+        // Obtener equipos de protección
+        List<SsomaEquipoProteccion> equipos = equipoProteccionRepository.findByPetarIdPetar(petar.getIdPetar());
+        List<EquipoProteccionResponseDTO> equiposDTO = equipos.stream()
+                .map(e -> EquipoProteccionResponseDTO.builder()
+                        .equipoNombre(e.getEquipoNombre())
+                        .usado(e.getUsado())
+                        .build())
+                .collect(Collectors.toList());
 
-    @Override
-    @Transactional
-    public InspeccionHerramientaResponse crearInspeccionHerramienta(InspeccionHerramientaRequest request) {
-        InspeccionHerramienta inspeccion = new InspeccionHerramienta();
-        inspeccion.setNumeroRegistro(generarNumeroRegistro("IHER"));
-        inspeccion.setFecha(LocalDate.now());
-        inspeccion.setUbicacionSede(request.getUbicacionSede());
-
-        // Relación con OT
-        if (request.getIdOts() != null) {
-            Ots ot = otsRepository.findById(request.getIdOts())
-                    .orElseThrow(() -> new RuntimeException("OT no encontrada"));
-            inspeccion.setOts(ot);
-        }
-
-        // Cliente y Proyecto
-        if (request.getIdCliente() != null) {
-            inspeccion.setCliente(new com.backend.comfutura.model.Cliente());
-            inspeccion.getCliente().setIdCliente(request.getIdCliente());
-        }
-        if (request.getIdProyecto() != null) {
-            inspeccion.setProyecto(new com.backend.comfutura.model.Proyecto());
-            inspeccion.getProyecto().setIdProyecto(request.getIdProyecto());
-        }
-
-        // Personas
-        if (request.getIdSupervisor() != null) {
-            inspeccion.setSupervisor(trabajadorRepository.findById(request.getIdSupervisor()).orElse(null));
-        }
-        if (request.getIdSupervisorTrabajo() != null) {
-            inspeccion.setSupervisorTrabajo(trabajadorRepository.findById(request.getIdSupervisorTrabajo()).orElse(null));
-        }
-        if (request.getIdResponsableLugar() != null) {
-            inspeccion.setResponsableLugar(trabajadorRepository.findById(request.getIdResponsableLugar()).orElse(null));
-        }
-        if (request.getIdSupervisorSst() != null) {
-            inspeccion.setSupervisorSst(trabajadorRepository.findById(request.getIdSupervisorSst()).orElse(null));
-        }
-
-        InspeccionHerramienta inspeccionGuardada = inspeccionHerramientaRepository.save(inspeccion);
-
-        // Guardar detalles
-        if (request.getDetalles() != null && !request.getDetalles().isEmpty()) {
-            for (InspeccionHerramientaDetalleRequest detalleReq : request.getDetalles()) {
-                InspeccionHerramientaDetalle detalle = new InspeccionHerramientaDetalle();
-                detalle.setInspeccion(inspeccionGuardada);
-
-                Herramienta herramienta = herramientaRepository.findById(detalleReq.getIdHerramienta()).orElse(null);
-                detalle.setHerramienta(herramienta);
-
-                detalle.setObservacion(detalleReq.getObservacion());
-                inspeccionHerramientaDetalleRepository.save(detalle);
-            }
-        }
-
-        return convertirInspeccionHerramientaAResponse(inspeccionGuardada);
-    }
-
-    @Override
-    public InspeccionHerramientaResponse obtenerInspeccionHerramientaPorId(Integer id) {
-        InspeccionHerramienta inspeccion = inspeccionHerramientaRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Inspección de herramientas no encontrada"));
-        return convertirInspeccionHerramientaAResponse(inspeccion);
-    }
-
-    @Override
-    public List<InspeccionHerramientaResponse> listarTodasInspeccionesHerramientas() {
-        return inspeccionHerramientaRepository.findAll().stream()
-                .map(this::convertirInspeccionHerramientaAResponse)
-                .toList();
-    }
-
-    // =====================================================
-    // 5. CREAR PETAR
-    // =====================================================
-
-    @Override
-    @Transactional
-    public PetarResponse crearPetar(PetarRequest request) {
-        Petar petar = new Petar();
-        petar.setNumeroRegistro(generarNumeroRegistro("PETAR"));
-        petar.setFecha(LocalDate.now());
-        petar.setRequiereEvaluacionAmbiente(request.getRequiereEvaluacionAmbiente());
-        petar.setAperturaLineaEquipos(request.getAperturaLineaEquipos());
-        petar.setHoraInicio(request.getHoraInicio());
-        petar.setRecursosNecesarios(request.getRecursosNecesarios());
-        petar.setProcedimiento(request.getProcedimiento());
-
-        // Relación con OT
-        if (request.getIdOts() != null) {
-            Ots ot = otsRepository.findById(request.getIdOts())
-                    .orElseThrow(() -> new RuntimeException("OT no encontrada"));
-            petar.setOts(ot);
-        }
-
-        // Personas
-        if (request.getIdSupervisorTrabajo() != null) {
-            petar.setSupervisorTrabajo(trabajadorRepository.findById(request.getIdSupervisorTrabajo()).orElse(null));
-        }
-        if (request.getIdResponsableLugar() != null) {
-            petar.setResponsableLugar(trabajadorRepository.findById(request.getIdResponsableLugar()).orElse(null));
-        }
-        if (request.getIdSupervisorSst() != null) {
-            petar.setSupervisorSst(trabajadorRepository.findById(request.getIdSupervisorSst()).orElse(null));
-        }
-        if (request.getIdBrigadista() != null) {
-            petar.setBrigadista(trabajadorRepository.findById(request.getIdBrigadista()).orElse(null));
-        }
-        if (request.getIdResponsableTrabajo() != null) {
-            petar.setResponsableTrabajo(trabajadorRepository.findById(request.getIdResponsableTrabajo()).orElse(null));
-        }
-
-        Petar petarGuardado = petarRepository.save(petar);
-
-        // Guardar respuestas generales
-        if (request.getRespuestas() != null && !request.getRespuestas().isEmpty()) {
-            for (PetarRespuestaRequest respuestaReq : request.getRespuestas()) {
-                PetarRespuesta respuesta = new PetarRespuesta();
-                respuesta.setPetar(petarGuardado);
-
-                respuesta.setPregunta(new PetarPregunta());
-                respuesta.getPregunta().setId(respuestaReq.getIdPregunta());
-
-                respuesta.setRespuesta(respuestaReq.getRespuesta());
-                respuesta.setObservacion(respuestaReq.getObservacion());
-
-                petarRespuestaRepository.save(respuesta);
-            }
-        }
-
-        // Guardar trabajadores autorizados
-        if (request.getTrabajadoresAutorizadosIds() != null && !request.getTrabajadoresAutorizadosIds().isEmpty()) {
-            for (Integer trabajadorId : request.getTrabajadoresAutorizadosIds()) {
-                PetarAutorizado autorizado = new PetarAutorizado();
-                autorizado.setPetar(petarGuardado);
-
-                Trabajador trabajador = trabajadorRepository.findById(trabajadorId)
-                        .orElseThrow(() -> new RuntimeException("Trabajador no encontrado"));
-                autorizado.setTrabajador(trabajador);
-
-                autorizado.setConformidadRequerida(request.getConformidadRequerida());
-
-                petarAutorizadoRepository.save(autorizado);
-            }
-        }
-
-        return convertirPetarAResponse(petarGuardado);
-    }
-
-    @Override
-    public PetarResponse obtenerPetarPorId(Integer id) {
-        Petar petar = petarRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("PETAR no encontrado"));
-        return convertirPetarAResponse(petar);
-    }
-
-    @Override
-    public List<PetarResponse> listarTodosPetar() {
-        return petarRepository.findAll().stream()
-                .map(this::convertirPetarAResponse)
-                .toList();
-    }
-
-    // =====================================================
-    // MÉTODOS AUXILIARES
-    // =====================================================
-
-    // Método para generar número de registro (si no lo tienes)
-    private String generarNumeroRegistro(String tipo) {
-        String anio = String.valueOf(LocalDate.now().getYear());
-        String mes = String.format("%02d", LocalDate.now().getMonthValue());
-        String secuencia = String.format("%06d", new Random().nextInt(999999));
-        return tipo + "-" + anio + mes + "-" + secuencia;
-    }
-    private AtsResponse convertirAtsAResponse(Ats ats) {
-        AtsResponse response = new AtsResponse();
-        response.setIdAts(ats.getIdAts());
-        response.setFecha(ats.getFecha());
-        response.setHora(ats.getHora());
-        response.setNumeroRegistro(ats.getNumeroRegistro());
-        response.setEmpresa(ats.getEmpresa());
-        response.setLugarTrabajo(ats.getLugarTrabajo());
-        response.setCoordenadas(ats.getCoordenadas());
-
-        if (ats.getOts() != null) {
-            response.setIdOts(ats.getOts().getIdOts());
-            response.setCodigoOt(ats.getOts().getOt());
-        }
-
-        if (ats.getSupervisorTrabajo() != null) {
-            response.setIdSupervisorTrabajo(ats.getSupervisorTrabajo().getIdTrabajador());
-            response.setNombreSupervisorTrabajo(ats.getSupervisorTrabajo().getNombres() + " " +
-                    ats.getSupervisorTrabajo().getApellidos());
-        }
-
-        if (ats.getResponsableLugar() != null) {
-            response.setIdResponsableLugar(ats.getResponsableLugar().getIdTrabajador());
-            response.setNombreResponsableLugar(ats.getResponsableLugar().getNombres() + " " +
-                    ats.getResponsableLugar().getApellidos());
-        }
-
-        if (ats.getSupervisorSst() != null) {
-            response.setIdSupervisorSst(ats.getSupervisorSst().getIdTrabajador());
-            response.setNombreSupervisorSst(ats.getSupervisorSst().getNombres() + " " +
-                    ats.getSupervisorSst().getApellidos());
-        }
-
-        return response;
-    }
-
-    private CapacitacionResponse convertirCapacitacionAResponse(Capacitacion capacitacion) {
-        CapacitacionResponse response = new CapacitacionResponse();
-        response.setIdCapacitacion(capacitacion.getIdCapacitacion());
-        response.setNumeroRegistro(capacitacion.getNumeroRegistro());
-        response.setTema(capacitacion.getTema());
-        response.setFecha(capacitacion.getFecha());
-        response.setHora(capacitacion.getHora());
-        response.setTipoCharla(capacitacion.getTipoCharla());
-
-        if (capacitacion.getCapacitador() != null) {
-            response.setIdCapacitador(capacitacion.getCapacitador().getIdTrabajador());
-            response.setNombreCapacitador(capacitacion.getCapacitador().getNombres() + " " +
-                    capacitacion.getCapacitador().getApellidos());
-        }
-
-        if (capacitacion.getSupervisorTrabajo() != null) {
-            response.setIdSupervisorTrabajo(capacitacion.getSupervisorTrabajo().getIdTrabajador());
-            response.setNombreSupervisorTrabajo(capacitacion.getSupervisorTrabajo().getNombres() + " " +
-                    capacitacion.getSupervisorTrabajo().getApellidos());
-        }
-
-        if (capacitacion.getResponsableLugar() != null) {
-            response.setIdResponsableLugar(capacitacion.getResponsableLugar().getIdTrabajador());
-            response.setNombreResponsableLugar(capacitacion.getResponsableLugar().getNombres() + " " +
-                    capacitacion.getResponsableLugar().getApellidos());
-        }
-
-        if (capacitacion.getSupervisorSst() != null) {
-            response.setIdSupervisorSst(capacitacion.getSupervisorSst().getIdTrabajador());
-            response.setNombreSupervisorSst(capacitacion.getSupervisorSst().getNombres() + " " +
-                    capacitacion.getSupervisorSst().getApellidos());
-        }
-
-        return response;
-    }
-
-    private InspeccionEppResponse convertirInspeccionEppAResponse(InspeccionEpp inspeccion) {
-        InspeccionEppResponse response = new InspeccionEppResponse();
-        response.setId(inspeccion.getId());
-        response.setNumeroRegistro(inspeccion.getNumeroRegistro());
-        response.setFecha(inspeccion.getFecha());
-        response.setTipoInspeccion(inspeccion.getTipoInspeccion());
-        response.setAreaTrabajo(inspeccion.getAreaTrabajo());
-
-        if (inspeccion.getInspector() != null) {
-            response.setIdInspector(inspeccion.getInspector().getIdTrabajador());
-            response.setNombreInspector(inspeccion.getInspector().getNombres() + " " +
-                    inspeccion.getInspector().getApellidos());
-        }
-
-        if (inspeccion.getSupervisorTrabajo() != null) {
-            response.setIdSupervisorTrabajo(inspeccion.getSupervisorTrabajo().getIdTrabajador());
-            response.setNombreSupervisorTrabajo(inspeccion.getSupervisorTrabajo().getNombres() + " " +
-                    inspeccion.getSupervisorTrabajo().getApellidos());
-        }
-
-        if (inspeccion.getResponsableLugar() != null) {
-            response.setIdResponsableLugar(inspeccion.getResponsableLugar().getIdTrabajador());
-            response.setNombreResponsableLugar(inspeccion.getResponsableLugar().getNombres() + " " +
-                    inspeccion.getResponsableLugar().getApellidos());
-        }
-
-        if (inspeccion.getSupervisorSst() != null) {
-            response.setIdSupervisorSst(inspeccion.getSupervisorSst().getIdTrabajador());
-            response.setNombreSupervisorSst(inspeccion.getSupervisorSst().getNombres() + " " +
-                    inspeccion.getSupervisorSst().getApellidos());
-        }
-
-        return response;
-    }
-
-    private InspeccionHerramientaResponse convertirInspeccionHerramientaAResponse(InspeccionHerramienta inspeccion) {
-        InspeccionHerramientaResponse response = new InspeccionHerramientaResponse();
-        response.setId(inspeccion.getId());
-        response.setNumeroRegistro(inspeccion.getNumeroRegistro());
-        response.setFecha(inspeccion.getFecha());
-        response.setUbicacionSede(inspeccion.getUbicacionSede());
-
-        if (inspeccion.getSupervisor() != null) {
-            response.setIdSupervisor(inspeccion.getSupervisor().getIdTrabajador());
-            response.setNombreSupervisor(inspeccion.getSupervisor().getNombres() + " " +
-                    inspeccion.getSupervisor().getApellidos());
-        }
-
-        if (inspeccion.getSupervisorTrabajo() != null) {
-            response.setIdSupervisorTrabajo(inspeccion.getSupervisorTrabajo().getIdTrabajador());
-            response.setNombreSupervisorTrabajo(inspeccion.getSupervisorTrabajo().getNombres() + " " +
-                    inspeccion.getSupervisorTrabajo().getApellidos());
-        }
-
-        if (inspeccion.getResponsableLugar() != null) {
-            response.setIdResponsableLugar(inspeccion.getResponsableLugar().getIdTrabajador());
-            response.setNombreResponsableLugar(inspeccion.getResponsableLugar().getNombres() + " " +
-                    inspeccion.getResponsableLugar().getApellidos());
-        }
-
-        if (inspeccion.getSupervisorSst() != null) {
-            response.setIdSupervisorSst(inspeccion.getSupervisorSst().getIdTrabajador());
-            response.setNombreSupervisorSst(inspeccion.getSupervisorSst().getNombres() + " " +
-                    inspeccion.getSupervisorSst().getApellidos());
-        }
-
-        return response;
-    }
-
-    private PetarResponse convertirPetarAResponse(Petar petar) {
-        PetarResponse response = new PetarResponse();
-        response.setId(petar.getId());
-        response.setNumeroRegistro(petar.getNumeroRegistro());
-        response.setFecha(petar.getFecha());
-        response.setRequiereEvaluacionAmbiente(petar.getRequiereEvaluacionAmbiente());
-        response.setAperturaLineaEquipos(petar.getAperturaLineaEquipos());
-        response.setHoraInicio(petar.getHoraInicio());
-        response.setRecursosNecesarios(petar.getRecursosNecesarios());
-        response.setProcedimiento(petar.getProcedimiento());
-
-        if (petar.getSupervisorTrabajo() != null) {
-            response.setIdSupervisorTrabajo(petar.getSupervisorTrabajo().getIdTrabajador());
-            response.setNombreSupervisorTrabajo(petar.getSupervisorTrabajo().getNombres() + " " +
-                    petar.getSupervisorTrabajo().getApellidos());
-        }
-
-        if (petar.getResponsableLugar() != null) {
-            response.setIdResponsableLugar(petar.getResponsableLugar().getIdTrabajador());
-            response.setNombreResponsableLugar(petar.getResponsableLugar().getNombres() + " " +
-                    petar.getResponsableLugar().getApellidos());
-        }
-
-        if (petar.getSupervisorSst() != null) {
-            response.setIdSupervisorSst(petar.getSupervisorSst().getIdTrabajador());
-            response.setNombreSupervisorSst(petar.getSupervisorSst().getNombres() + " " +
-                    petar.getSupervisorSst().getApellidos());
-        }
-
-        if (petar.getBrigadista() != null) {
-            response.setIdBrigadista(petar.getBrigadista().getIdTrabajador());
-            response.setNombreBrigadista(petar.getBrigadista().getNombres() + " " +
-                    petar.getBrigadista().getApellidos());
-        }
-
-        if (petar.getResponsableTrabajo() != null) {
-            response.setIdResponsableTrabajo(petar.getResponsableTrabajo().getIdTrabajador());
-            response.setNombreResponsableTrabajo(petar.getResponsableTrabajo().getNombres() + " " +
-                    petar.getResponsableTrabajo().getApellidos());
-        }
-
-        return response;
+        return PetarResponseDTO.builder()
+                .energiaPeligrosa(petar.getEnergiaPeligrosa())
+                .trabajoAltura(petar.getTrabajoAltura())
+                .izaje(petar.getIzaje())
+                .excavacion(petar.getExcavacion())
+                .espaciosConfinados(petar.getEspaciosConfinados())
+                .trabajoCaliente(petar.getTrabajoCaliente())
+                .otros(petar.getOtros())
+                .otrosDescripcion(petar.getOtrosDescripcion())
+                .velocidadAire(petar.getVelocidadAire())
+                .contenidoOxigeno(petar.getContenidoOxigeno())
+                .horaInicioPetar(petar.getHoraInicioPetar())
+                .horaFinPetar(petar.getHoraFinPetar())
+                .respuestas(respuestasDTO)
+                .equiposProteccion(equiposDTO)
+                .build();
     }
 }
